# backend/app/src/v1/routes.py
@@ -13,6 +13,8 @@ from .api.login import Login
 from .api.notes import Notes
 from .api.notes_note_id import NotesNoteId
 from .api.videos import Videos
+from .api.videos_video_id_tag import VideosVideoIdTag
+from .api.tags import Tags
 
 
 routes = [
@@ -21,4 +23,6 @@ routes = [
     dict(resource=Notes, urls=['/notes'], endpoint='notes'),
     dict(resource=NotesNoteId, urls=['/notes/<int:note_id>'], endpoint='notes_note_id'),
     dict(resource=Videos, urls=['/videos'], endpoint='videos'),
+    dict(resource=VideosVideoIdTag, urls=['/videos/<video_id>/tag'], endpoint='videos_video_id_tag'),
+    dict(resource=Tags, urls=['/tags'], endpoint='tags'),
 ]
