# backend/app/src/v1/schemas.py
@@ -50,17 +50,20 @@ class RefNode(object):
 
 base_path = '/v1'
 
-definitions = {'definitions': {'error': {'type': 'object', 'properties': {'errorMessage': {'type': 'string', 'example': 'error message'}}}, 'note': {'type': 'object', 'properties': {'note_id': {'type': 'integer', 'example': 1}, 'note': {'type': 'string', 'example': 'this is my note'}, 'user_id': {'type': 'integer', 'example': 1}, 'video_id': {'type': 'string', 'example': 'https://www.youtube.com/watch?v=gSdG3FsMBq4'}, 'timestamp': {'type': 'number', 'example': 2.5}}}, 'video': {'type': 'object', 'properties': {'video_id': {'type': 'string', 'example': 'https://www.youtube.com/watch?v=gSdG3FsMBq4'}, 'user_id': {'type': 'integer', 'example': 1}, 'video_title': {'type': 'string', 'example': 'physics 101'}, 'categories': {'type': 'array', 'items': {'type': 'string'}, 'example': ['education', 'comedy']}, 'notes_ids': {'type': 'array', 'items': {'type': 'integer'}, 'example': [1, 4, 17]}, 'notes_count': {'type': 'integer', 'example': 3}}}}, 'parameters': {}}
+definitions = {'definitions': {'error': {'type': 'object', 'properties': {'errorMessage': {'type': 'string', 'example': 'error message'}}}, 'tag': {'type': 'object', 'properties': {'tag': {'type': 'string', 'example': 'comedy'}, 'user_id': {'type': 'integer', 'example': 1}}}, 'note': {'type': 'object', 'properties': {'note_id': {'type': 'integer', 'example': 1}, 'note': {'type': 'string', 'example': 'this is my note'}, 'user_id': {'type': 'integer', 'example': 1}, 'video_id': {'type': 'string', 'example': 'gSdG3FsMBq4'}, 'timestamp': {'type': 'number', 'example': 2.5}}}, 'video': {'type': 'object', 'properties': {'video_id': {'type': 'string', 'example': 'gSdG3FsMBq4'}, 'user_id': {'type': 'integer', 'example': 1}, 'video_title': {'type': 'string', 'example': 'physics 101'}, 'categories': {'type': 'string', 'example': 'comedy'}, 'notes_ids': {'type': 'array', 'items': {'type': 'integer'}, 'example': [1, 4, 17]}, 'notes_count': {'type': 'integer', 'example': 3}}}}, 'parameters': {}}
 
 validators = {
     ('logout', 'DELETE'): {'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
     ('login', 'POST'): {'json': {'type': 'object', 'properties': {'email': {'type': 'string', 'example': 'mitchell_shelton@y7mail.com'}, 'password': {'type': 'string', 'example': 'secret'}}}},
     ('notes', 'GET'): {'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}, 'args': {'required': [], 'properties': {'sort': {'type': 'string', 'enum': ['+note_id', '+note', '+user_id', '+video_id', '+timestamp', '-note_id', '-note', '-user_id', '-video_id', '-timestamp'], 'default': '+timestamp'}, 'note_id': {'type': 'integer'}, 'video_id': {'type': 'string'}, 'user_id': {'type': 'integer'}, 'timestamp': {'type': 'number'}, 'note': {'type': 'string'}}}},
-    ('notes', 'POST'): {'json': {'type': 'object', 'properties': {'note': {'type': 'string', 'example': 'this is my note'}, 'user_id': {'type': 'integer', 'example': 1}, 'video_id': {'type': 'string', 'example': 'https://www.youtube.com/watch?v=gSdG3FsMBq4'}, 'timestamp': {'type': 'number', 'example': 2.5}}}, 'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
+    ('notes', 'POST'): {'json': {'type': 'object', 'properties': {'note': {'type': 'string', 'example': 'this is my note'}, 'user_id': {'type': 'integer', 'example': 1}, 'video_id': {'type': 'string', 'example': 'gSdG3FsMBq4'}, 'timestamp': {'type': 'number', 'example': 2.5}}}, 'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
     ('notes_note_id', 'GET'): {'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
     ('notes_note_id', 'PUT'): {'json': {'$ref': '#/definitions/note'}, 'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
     ('notes_note_id', 'DELETE'): {'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
     ('videos', 'GET'): {'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}, 'args': {'required': [], 'properties': {'sort': {'type': 'string', 'enum': ['+video_id', '+user_id', '-video_id', '-user_id', '+video_title', '-video_title', '+categories', '-categories', '+notes_count', '-notes_count'], 'default': '+video_id'}, 'video_id': {'type': 'string'}, 'user_id': {'type': 'integer'}, 'video_title': {'type': 'string'}, 'categories': {'type': 'string'}, 'notes_count': {'type': 'integer'}}}},
+    ('videos_video_id_tag', 'POST'): {'json': {'type': 'object', 'properties': {'user_id': {'type': 'integer', 'example': 2}, 'tag': {'type': 'string', 'example': 'comedy'}}}, 'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
+    ('tags', 'POST'): {'json': {'$ref': '#/definitions/tag'}, 'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}},
+    ('tags', 'GET'): {'headers': {'required': ['Authorization'], 'properties': {'Authorization': {'type': 'string'}}}, 'args': {'required': [], 'properties': {'user_id': {'type': 'integer'}, 'tag': {'type': 'string'}}}},
 }
 
 filters = {
@@ -72,6 +75,9 @@ filters = {
     ('notes_note_id', 'PUT'): {200: {'headers': None, 'schema': {'$ref': '#/definitions/note'}}, 400: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}, 401: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}, 409: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}, 422: {'headers': None, 'schema': None}},
     ('notes_note_id', 'DELETE'): {200: {'headers': None, 'schema': None}, 400: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}, 401: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}, 422: {'headers': None, 'schema': None}},
     ('videos', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'videos': {'type': 'array', 'items': {'$ref': '#/definitions/video'}}, 'num_videos': {'type': 'integer', 'example': 1}}}}, 400: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}, 401: {'headers': None, 'schema': None}, 422: {'headers': None, 'schema': None}},
+    ('videos_video_id_tag', 'POST'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'videos': {'$ref': '#/definitions/video'}}}}, 400: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}},
+    ('tags', 'POST'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'tag': {'$ref': '#/definitions/tag'}}}}, 400: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}},
+    ('tags', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'tags': {'type': 'array', 'items': {'$ref': '#/definitions/tag'}}, 'num_tags': {'type': 'integer', 'example': 1}}}}, 400: {'headers': None, 'schema': {'$ref': '#/definitions/error'}}},
 }
 
 scopes = {
